examples/routes/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: opa
  namespace: traefik
spec:
  plugin:
    opa:
      policy: |
        package example.policies

        allow {
          [_, encoded] := split(input.headers.Authorization, " ")
          [header, payload, signature] = io.jwt.decode(encoded)
          payload["email"] == "admin@example.com"
        }
      forwardHeaders:
        Group: data.example.policies.grp

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jwt
  namespace: traefik
spec:
  plugin:
    jwt:
      jwksUrl: http://keycloak-service.traefik.svc:7000/realms/keycloak-oauth/protocol/openid-connect/certs
