examples/routes/httpbin-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`httpbin.apigateway.docker.localhost`)
    services:
    - name: httpbin-svc
      port: 8000
    middlewares:
    - name: jwt
      namespace: traefik
#    - name: opa
#      namespace: traefik
